[package]
name = "martin-embedded"
version = "0.1.0"
description = "Embed the martin tile server inside another application"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
default = ["mbtiles", "pmtiles", "fonts", "sprites", "styles"]
mbtiles = ["martin/mbtiles"]
pmtiles = ["martin/pmtiles"]
fonts = ["martin/fonts"]
sprites = ["martin/sprites"]
styles = ["martin/styles"]
geojson = ["martin/geojson"]
postgres = ["martin/postgres"]
metrics = ["martin/metrics"]
# Requires npm at build time
webui = ["martin/webui"]

[dependencies]
martin = { path = "../martin", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true

[lints]
workspace = true
