[package]
name = "martin-embedded"
version = "0.1.0"
description = "Embed the martin tile server inside another application"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[features]
default = ["mbtiles", "pmtiles", "fonts", "sprites", "styles"]
mbtiles = ["martin/mbtiles", "martin-core/mbtiles"]
pmtiles = ["martin/pmtiles", "martin-core/pmtiles"]
fonts = ["martin/fonts"]
sprites = ["martin/sprites"]
styles = ["martin/styles"]
geojson = ["martin/geojson", "martin-core/geojson"]
postgres = ["martin/postgres", "martin-core/postgres"]
metrics = ["martin/metrics"]
# Requires npm at build time
webui = ["martin/webui"]

[dependencies]
martin = { path = "../martin", default-features = false }
martin-core = { path = "../martin-core", default-features = false }

[dev-dependencies]
reqwest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true

[lints]
workspace = true
